[project]
name = "comfyui-photomaker-plus"
description = "ComfyUI reference implementation for [a/PhotoMaker](https://github.com/TencentARC/PhotoMaker) models.\nNOTE: PhotoMaker V2 is supported."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/shiimizu/ComfyUI-PhotoMaker-Plus"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-PhotoMaker-Plus"
Icon = ""
